[package]
name = "libdownloader-rs"
version = "0.0.1"
authors = ["Samuel Marks <807580+SamuelMarks@users.noreply.github.com>"]
license = 'Apache-2.0 OR MIT'
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
http = "0.2.0"
lazy_static = "1.4.0"
