[package]
name = "libdownloader"
version = "0.0.1"
authors = ["Samuel Marks <807580+SamuelMarks@users.noreply.github.com>"]
license = 'Apache-2.0 OR MIT'
edition = "2018"

[dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
actix-web = "2.0.0"
actix-rt = "1.0.0"
http = "0.2.1"
lazy_static = "1.4.0"
anyhow = "1.0.28"
unwrap-infallible = "0.1.5"
